--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ Github Theme URI: https://github.com/killyaskill/deoxytheme-test
 Description: first test theme
 Author: Team Deoxy
 Version: Not released
-
+GitHub Plugin URI: https://github.com/afragen/github-updater
 */
