--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ Theme URI: http://dev.deoxy.nl/
 Github Theme URI: https://github.com/killyaskill/deoxytheme-test
 Description: first test theme
 Author: Team Deoxy
-Version: Not released
+Version: v0
 GitHub Plugin URI: https://github.com/afragen/github-updater
 */
