--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Deoxy Theme 1
+Theme Name: Deoxy premium
 Theme URI: http://dev.deoxy.nl/
 Github Theme URI: https://github.com/killyaskill/deoxytheme-test
-Description: first test theme
+Description: The official team deoxy theme!
 Author: Team Deoxy
-Version: v0.3
+Version: v1.0.2
 GitHub Plugin URI: https://github.com/afragen/github-updater
 */
