--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 Theme Name: Deoxy premium
 Theme URI: http://dev.deoxy.nl/
 Github Theme URI: https://github.com/killyaskill/deoxytheme-test
-Description: The official team deoxy theme!
+Description: The official team deoxy theme! The theme is currently being worked on very much and will be made pretty soon!
 Author: Team Deoxy
-Version: v1.0.3
+Version: v0.0.1
 GitHub Plugin URI: https://github.com/afragen/github-updater
 */
